--- a/stylesheets/all.scss
+++ b/stylesheets/all.scss
@@ -4,6 +4,7 @@
 @import "helpers/variables";
 @import "../node_modules/bootstrap/scss/mixins";
 @import "../node_modules/bootstrap/scss/bootstrap";
+@import "helpers/extra-color";
 
 //base
 @import "base/wrapper";
