--- a/stylesheets/components/_subtitle-line.scss
+++ b/stylesheets/components/_subtitle-line.scss
@@ -5,7 +5,7 @@
 		content:"";
 		position: absolute;
 		top: 50%;
-		background: $secondary-dark;
+		background: $secondary;
 		width: 13%;
 		height: 1px;
 	}
